adiciona faixa de peso

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <p class="result">
             <strong id="imc-result"></strong>
         </p>
+        <p>
+            Este valor considera que você está na faixa <strong id="faixa-peso"></strong>
+        </p>
     </div>
     <script src="script.js"></script>
 </body>
